# swingup

./: CMakeLists.txt  Process Output  README.md  Simulated Differential States  asd.py  carr.py  com.py  genmpc car.cpp  genmpc copy 2.cpp  genmpc copy 3.cpp  genmpc copy.cpp  genmpc.cpp  genwalk.cpp  main.py  stats.csv  stats.py  swingup.py  test.c  u.txt  wheel_robot.urdf  x.txt
ardcom/: ardcom.ino
arduino/: arduino.ino
mpcexport/: Makefile  acado_common.h  acado_integrator.c  acado_qpoases_interface.cpp  acado_solver.c  test  test.c  test.py
mpcexport-old/: Makefile  acado_integrator.c  test.c  test.py
